# matrix-message-hook

./: .gitignore  Cargo.toml  deny.toml  flake.nix  history.txt  rust-toolchain.toml
.cargo/: audit.toml
crates/fake-human/: Cargo.toml
crates/fake-human/src/: main.rs
crates/hook-admin/: Cargo.toml
crates/hook-admin/src/: main.rs
crates/hook-core/: Cargo.toml
crates/hook-core/src/: admin.rs  appservice.rs  client.rs  command.rs  config.rs  id.rs  lib.rs  store.rs
crates/hook-core/tests/: live_surreal.rs
crates/hookd/: Cargo.toml
crates/hookd/src/: bot.rs  clients.rs  main.rs  sender.rs  web.rs
crates/my-workspace-hack/: Cargo.toml
